// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-document-type-siblings should get sibling document types 1`] = `
{
  "content": [
    {
      "text": "{"totalBefore":2,"totalAfter":0,"items":[{"isElement":false,"icon":"icon-document","isFolder":false,"name":"_Test Target DocumentType","id":"00000000-0000-0000-0000-000000000000","parent":{"id":"00000000-0000-0000-0000-000000000000"},"flags":[],"hasChildren":false}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-document-type-siblings should handle non-existent document type 1`] = `
{
  "content": [
    {
      "text": "Error using get-document-type-siblings:
{
  "message": "Request failed with status code 404",
  "response": ""
}",
      "type": "text",
    },
  ],
}
`;
